<resources>
    <string name="app_name">Valorant Agent Wiki</string>
    <string name="about_page">About Page</string>
    <string name="name">Riyandi Firman Pratama</string>
    <string name="email">riyandi.firman08@gmail.com</string>
    <string name="back_to_main_page">Back to main page</string>
    <string name="agent_name">Agent Name</string>
    <string name="role">Role</string>
    <string name="country">Country</string>
    <string name="ultimate">Ultimate</string>
    <string name="description">Description</string>
    <string name="jett">Jett</string>
    <string name="share">Share</string>
    <string name="about_me">About Me &#128072;</string>

    <string-array name="data_name">
        <item>Astra</item>
        <item>Breach</item>
        <item>Brimstone</item>
        <item>Chamber</item>
        <item>Cypher</item>
        <item>Fade</item>
        <item>Harbor</item>
        <item>Jett</item>
        <item>KAY-O</item>
        <item>Killjoy</item>
        <item>Neon</item>
        <item>Omen</item>
        <item>Phoenix</item>
        <item>Raze</item>
        <item>Reyna</item>
        <item>Sage</item>
        <item>Skye</item>
        <item>Sova</item>
        <item>Viper</item>
        <item>Yoru</item>
    </string-array>

    <string-array name="data_role">
        <item>Role : Controller</item>
        <item>Role : Initiator</item>
        <item>Role : Controller</item>
        <item>Role : Sentinel</item>
        <item>Role : Sentinel</item>
        <item>Role : Initiator</item>
        <item>Role : Controller</item>
        <item>Role : Duelist</item>
        <item>Role : Initiator</item>
        <item>Role : Sentinel</item>
        <item>Role : Duelist</item>
        <item>Role : Controller</item>
        <item>Role : Duelist</item>
        <item>Role : Duelist</item>
        <item>Role : Duelist</item>
        <item>Role : Sentinel</item>
        <item>Role : Initiator</item>
        <item>Role : Initiator</item>
        <item>Role : Controller</item>
        <item>Role : Duelist</item>
    </string-array>

    <string-array name="data_country">
        <item>Country : Ghana</item>
        <item>Country : Sweden</item>
        <item>Country : United States</item>
        <item>Country : France</item>
        <item>Country : Morocco</item>
        <item>Country : Turkey</item>
        <item>Country : India</item>
        <item>Country : Korean</item>
        <item>Country : United States</item>
        <item>Country : Germany</item>
        <item>Country : Philiphine</item>
        <item>Country : United States</item>
        <item>Country : England</item>
        <item>Country : Brazil</item>
        <item>Country : Mexico</item>
        <item>Country : China</item>
        <item>Country : Australia</item>
        <item>Country : Russia</item>
        <item>Country : United States</item>
        <item>Country : Japan</item>
    </string-array>

    <string-array name="data_ultimate">
        <item>Ultimate : Cosmic Divide</item>
        <item>Ultimate : Rolling Thunder</item>
        <item>Ultimate : Orbital Strike</item>
        <item>Ultimate : Tour de Force</item>
        <item>Ultimate : Neural Theft</item>
        <item>Ultimate : Nightfall</item>
        <item>Ultimate : Reckoning</item>
        <item>Ultimate : Bladestorm</item>
        <item>Ultimate : Null Command</item>
        <item>Ultimate : Lockdown</item>
        <item>Ultimate : Over Drive</item>
        <item>Ultimate : From the Shadow</item>
        <item>Ultimate : Run it Back</item>
        <item>Ultimate : Show Stopper</item>
        <item>Ultimate : Empress</item>
        <item>Ultimate : Ressurection</item>
        <item>Ultimate : Seekers</item>
        <item>Ultimate : Hunter Fury</item>
        <item>Ultimate : Viper Pit</item>
        <item>Ultimate : Dimensional Drift</item>
    </string-array>

    <integer-array name="data_role_icon">
        <item>@drawable/controller</item>
        <item>@drawable/initiator</item>
        <item>@drawable/controller</item>
        <item>@drawable/sentinel</item>
        <item>@drawable/sentinel</item>
        <item>@drawable/initiator</item>
        <item>@drawable/controller</item>
        <item>@drawable/duelist</item>
        <item>@drawable/initiator</item>
        <item>@drawable/sentinel</item>
        <item>@drawable/duelist</item>
        <item>@drawable/controller</item>
        <item>@drawable/duelist</item>
        <item>@drawable/duelist</item>
        <item>@drawable/duelist</item>
        <item>@drawable/sentinel</item>
        <item>@drawable/initiator</item>
        <item>@drawable/initiator</item>
        <item>@drawable/controller</item>
        <item>@drawable/duelist</item>
    </integer-array>

    <string-array name="data_description">
        <item>Ghanaian Agent Astra harnesses the energies of the cosmos to reshape battlefields to her whim. With full command of her astral form and a talent for deep strategic foresight, she is always eons ahead of her enemy next move.</item>
        <item>Breach, the bionic Swede, fires powerful, targeted kinetic blasts to aggressively clear a path through enemy ground. The damage and disruption he inflicts ensures no fight is ever fair.</item>
        <item>Joining from the USA, Brimstone orbital arsenal ensures his squad always has the advantage. His ability to deliver utility precisely and from a distance makes him an unmatched boots-on-the-ground commander.</item>
        <item>Well dressed and well armed, French weapons designer Chamber expels aggressors with deadly precision. He leverages his custom arsenal to hold the line and pick off enemies from afar, with a contingency built for every plan.</item>
        <item>The Moroccan information broker, Cypher is a one-man surveillance network who keeps tabs on the enemy every move. No secret is safe. No maneuver goes unseen. Cypher is always watching.</item>
        <item>Turkish bounty hunter, Fade, unleashes the power of raw nightmares to seize enemy secrets. Attuned with terror itself, she hunts targets and reveals their deepest fears—before crushing them in the dark.</item>
        <item>Hailing from India’s coast, Harbor storms the field wielding ancient technology with dominion over water. He unleashes frothing rapids and crushing waves to shield his allies and pummel those that oppose him.</item>
        <item>Representing her home country of South Korea, Jett agile and evasive fighting style lets her take risks no one else can. She runs circles around every skirmish, cutting enemies before they even know what hit them.</item>
        <item>KAY/O is a machine of war built for a single purpose: neutralizing radiants. His power to suppress enemy abilities cripples his opponents capacity to fight back, securing him and his allies the ultimate edge.</item>
        <item>The genius of Germany. Killjoy secures the battlefield with ease using her arsenal of inventions. If the damage from her gear doesnt stop her enemies, her robots debuff will help make short work of them.</item>
        <item>Filipino Agent Neon surges forward at shocking speeds, discharging bursts of bioelectric radiance as fast as her body generates it. She races ahead to catch enemies off guard, then strikes them down quicker than lightning.</item>
        <item>A phantom of a memory, Omen hunts in the shadows. He renders enemies blind, teleports across the field, then lets paranoia take hold as his foe scrambles to learn where he might strike next.</item>
        <item>Hailing from the U.K., Phoenix star power shines through in his fighting style, igniting the battlefield with flash and flare. Whether he got backup or not, he will rush into a fight on his own terms.</item>
        <item>Raze explodes out of Brazil with her big personality and big guns. With her blunt-force-trauma playstyle, she excels at flushing entrenched enemies and clearing tight spaces with a generous dose of “boom.”</item>
        <item>Forged in the heart of Mexico, Reyna dominates single combat, popping off with each kill she scores. Her capability is only limited by her raw skill, making her highly dependent on performance.</item>
        <item>The stronghold of China, Sage creates safety for herself and her team wherever she goes. Able to revive fallen friends and stave off aggressive pushes, she provides a calm center to a hellish fight.</item>
        <item>Hailing from Australia, Skye and her band of beasts trail-blaze the way through hostile territory. With her creations hampering the enemy, and her power to heal others, the team is strongest and safest by Skye’s side.</item>
        <item>Born from the eternal winter of Russia tundra, Sova tracks, finds, and eliminates enemies with ruthless efficiency and precision. His custom bow and incredible scouting abilities ensure that even if you run, you cannot hide.</item>
        <item>The American chemist, Viper deploys an array of poisonous chemical devices to control the battlefield and cripple the enemy vision. If the toxins dont kill her prey, her mind games surely will.</item>
        <item>Japanese native, Yoru, rips holes straight through reality to infiltrate enemy lines unseen. Using deception and aggression in equal measure, he gets the drop on each target before they know where to look.</item>
    </string-array>

    <integer-array name="data_photo">
        <item>@drawable/astra</item>
        <item>@drawable/breach</item>
        <item>@drawable/brimstone</item>
        <item>@drawable/chamber</item>
        <item>@drawable/cypher</item>
        <item>@drawable/fade</item>
        <item>@drawable/harbor</item>
        <item>@drawable/jett</item>
        <item>@drawable/kayo</item>
        <item>@drawable/killjoy</item>
        <item>@drawable/neon</item>
        <item>@drawable/omen</item>
        <item>@drawable/phoenix</item>
        <item>@drawable/raze</item>
        <item>@drawable/reyna</item>
        <item>@drawable/sage</item>
        <item>@drawable/skye</item>
        <item>@drawable/sova</item>
        <item>@drawable/viper</item>
        <item>@drawable/yoru</item>
    </integer-array>
</resources>